--- a/front/src/components/client/intervenants.css
+++ b/front/src/components/client/intervenants.css
@@ -11,27 +11,6 @@
 };
 
 .iconIntervenants {
-  color: 'rgba(255, 255, 255, 0.54)';
-}
-
-.ModalIntervenants {
-  position: fixed;
-  z-index: 500;
   background-color: white;
-  width: 70%;
-  border: 1px solid #CCC;
-  box-shadow: 1px 1px 1px black;
-  padding: 16px;
-  left: 15%;
-  top: 3%;
-  box-sizing: border-box;
-  transition: all 0.3s ease-out;
-  text-align: justify;
-  }
-  
-  @media (min-width: 600px) {
-  .Modal {
-  width: 500px;
-  left: calc(50% - 250px);
-  }
-  }
+  width: 200;
+}
