tileIntervenants ok + titre onglet

--- a/front/src/components/client/intervenants.css
+++ b/front/src/components/client/intervenants.css
@@ -1,9 +1,11 @@
 .tileIntervenants {
-  display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   overflow: hidden;
-  background-color: #F2F2F2;
+  background-color: #E9E7DF;
+  width: 450px;
+  height: 500px;
+  padding: 8px;
 }
 
 .modalIntervenants {
@@ -11,6 +13,7 @@
   z-index: 500;
   background-color: #B2C4CB;
   width: 70%;
+  height: auto;
   padding: 16px;
   left: 15%;
   top: 15%;
@@ -18,20 +21,10 @@
   text-align: justify;
 }
 
-.gridList {
-  width: 500;
-  height: 450;
-}
-
-.modalAvatar {
-  width: 300;
-  height: 300;
-}
-
 .rootIntervenants {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   overflow: hidden;
-  background-color: #F2F2F2;
+  background-color: #E9E7DF;
 }
