--- a/front/src/containers/AtelierHome.css
+++ b/front/src/containers/AtelierHome.css
@@ -18,7 +18,10 @@ video {
     transform: translate(-50%, -50%)
 } 
 
-
+.fullwidth {
+  width: 100%;
+  text-align: center;
+}
 
 .fas {
     color: aliceblue;
